# otus-c-2024-07

./: README.md
HW01-Zipjpeg/: CMakeLists.txt
HW01-Zipjpeg/src/: detail.c  detail.h  main.c  zip.c  zip.h
HW03-Hash/: CMakeLists.txt
HW03-Hash/src/: hash.c  hash.h  main.c
HW04-Weather/: CMakeLists.txt
HW04-Weather/src/: json_parser.c  json_parser.h  main.c  weather.c  weather.h
HW05-Gtk/: CMakeLists.txt
HW05-Gtk/src/: dir_view.c  dir_view.h  main.c
HW06-Logger/: CMakeLists.txt
HW06-Logger/src/: logger.c  logger.h  main.c
HW07-ASM/: CMakeLists.txt  main.asm
HW07-ASM/src/: main.c
HW07-Valgrind/clib/: clib_package.diff  hash.diff
HW08-IPC/: CMakeLists.txt
HW08-IPC/src/: main.c  server.h
HW09-CRC32/: CMakeLists.txt
HW09-CRC32/src/: crc32.h  main.c
HW10-LogParser/: CMakeLists.txt
HW10-LogParser/src/: main.c
HW11-Network/: CMakeLists.txt
HW11-Network/src/: convertor.c  convertor.h  main.c
HW12-FileServer/: CMakeLists.txt
HW12-FileServer/src/: main.c  server.c  server.h
HW13-strace/: README.md  strace.txt
HW14-driver/: mouse_driv.c
HW15-DB/: CMakeLists.txt
HW15-DB/src/: main.c
HW16-Cube/: CMakeLists.txt
HW16-Cube/src/: main.c
HW17-2048/: CMakeLists.txt
HW17-2048/src/: main.c
pomodoro/: CMakeLists.txt  README.md
pomodoro/debian/: changelog  control  pomodoro.desktop
pomodoro/po/: en.po  pomodoro.pot  ru.po
pomodoro/po/en/LC_MESSAGES/: pomodoro.mo
pomodoro/po/ru/LC_MESSAGES/: pomodoro.mo
pomodoro/src/: main.c  main_window.c  main_window.h  notification.c  notification.h  settings.c  settings.h
